# sign-edge

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/sign_edge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sign_edge/cli/: canny.py
