[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sign_edge"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["click>=8.1.7", "scikit-image>=0.22.0"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["black>=23.12.1", "mypy>=1.8.0", "ruff>=0.1.11", "types-tqdm>=4.66.0.5"]

[project.scripts]
sign-edge = "sign_edge.cli.canny:main"

[tool.mypy]
disallow_untyped_defs = true
pretty = true
show_absolute_path = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
files = "src"

[tool.ruff]
# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"